deploy/prereqs/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: crusher-server
  namespace: crusher
  labels:
    app: crusher
    component: server
spec:
  type: ClusterIP
  selector:
    app: crusher
    component: server
  ports:
  - port: 80
    protocol: TCP
    targetPort: 5000
